--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
                         <div class="space-y-4">
                             <h3 class="text-xs font-bold text-amber-400 uppercase tracking-widest">Action Strategy</h3>
                             <div id="recBox" class="text-[11px] space-y-2 text-slate-300 leading-relaxed"></div>
+                            <div class="mt-4 p-3 bg-sky-500/10 border border-sky-500/20 rounded-lg">
+                                <p class="text-[10px] text-sky-300 font-bold uppercase mb-1">Expert Review Recommended</p>
+                                <p class="text-[10px] text-slate-400 leading-tight">Projections are based on mathematical simulations. Please consult a SEBI-registered financial advisor before making major life decisions based on these results.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -116,12 +120,15 @@
                 </div>
                 <div class="space-y-3">
                     <h3 class="font-bold text-white">Managing Sequence of Returns</h3>
-                    <p>The "Stress Test" simulates a crash in your first year of retirement. To survive this, keep 24-36 months of expenses in a Debt/Liquid fund. If the market crashes 30%, do not sell your stocks. Withdraw from your cash bucket instead until the market recovers.</p>
+                    <p>The "Stress Test" simulates a crash in your first year of retirement. To survive this, keep 24-36 months of expenses in a Debt/Liquid fund. If the market crashes 30%, do not sell your stocks; withdraw from your cash bucket until the market recovers.</p>
                 </div>
                 <div class="space-y-3">
                     <h3 class="font-bold text-white">The Lifestyle Step-up</h3>
                     <p>Don't just retire to your current lifestyle. Factor in a 20% "Luxury Bump" to account for hobbies, health insurance premiums, and travel. Your FIRE number should provide freedom, not just survival.</p>
                 </div>
+            </div>
+            <div class="mt-8 pt-4 border-t border-white/10 text-[10px] text-slate-500 italic leading-relaxed text-center">
+                Disclaimer: This Strategy Engine is for educational and informational purposes only. Financial markets involve significant risks. These simulations do not constitute personalized financial advice. Always seek advice from a qualified financial expert or SEBI-registered advisor before executing any investment strategy.
             </div>
         </section>
     </div>
@@ -144,7 +151,7 @@
                     labels: ['Equity', 'Gold', 'Cash', 'Locked', 'RE', 'Debt'],
                     datasets: [{ data: [0,0,0,0,0,0], backgroundColor: ['#38bdf8', '#fbbf24', '#94a3b8', '#f472b6', '#a78bfa', '#ef4444'], borderWidth: 0 }]
                 },
-                options: { plugins: { legend: { display: false } }, cutout: '82%' }
+                options: { plugins: { legend: { display: false } }, cutout: '82%', responsive: true, maintainAspectRatio: false }
             });
 
             const lCtx = document.getElementById('lineChart').getContext('2d');
